--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button (click)="pick()">pick</button>
+  <button ion-button (click)="presentActionSheet()">添加图片</button>
 </ion-content>
